--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+NEXT_PUBLIC_BASE_PATH=/demo
+
 NEXT_PUBLIC_API_URL=https://tmg.avasoftware.ir/api
 
 NEXT_PUBLIC_MAP_URL=https://map.avasoftware.ir
@@ -7,8 +9,3 @@ NEXT_PUBLIC_API_KEY=789F9C67-33BE-4E7B-9DE2-3855F5E43DF2
 NEXT_PUBLIC_ANALIZER_URL=https://analizer.avasoftware.ir/api
 
 NEXT_PUBLIC_SUPPORT_URL=https://tmg.bonyanava.ir/service/api
-
-
-
-
-
